--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -25,6 +25,9 @@ ul
   font-size: 60px
   font-weight: 200
   line-height: 80px
+  small
+    font-size: 16px
+    font-weight: bold
 
 hr.spacer
   width: 100px
