--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -129,6 +129,8 @@ main
   h4
     margin-top: 5px
     font-weight: 200
+.panel-primary .panel-heading a
+  color: white
 
 body.devise
   background-size: cover
