--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -181,3 +181,34 @@
     </table>
   </div>
 </div>
+
+<h2>Projets gérés</h2>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Semestre</th>
+      <th>Projet</th>
+      <th>Dates</th>
+      <th>Volume d'heures étudiant</th>
+      <th>Heures sans intervenant (heures étudiant, dans l'EDT)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @projects_in_charge.each do |project| %>
+      <tr>
+        <td><%= project.semesters.join(', ') %></td>
+        <td><%= project %></td>
+        <td>
+          Du <%= l project.from, format: "%d/%m" %>
+          au <%= l project.to, format: "%d/%m/%Y" %>
+        </td>
+        <td>
+          <%= project.student_hours %>
+          (<%= project.student_hours_cm %>/<%= project.student_hours_td %>/<%= project.student_hours_tp %>)
+        </td>
+        <% hours_with_no_one = project.events_for_user(User.temporary).sum(:student_hours) %>
+        <td class="<%= 'bg-danger' if hours_with_no_one > 0 %>"><%= hours_with_no_one.round %></td>
+      </tr>
+    <% end %> 
+  </tbody>
+</table>
