--- a/app/views/years/projects/index.html.erb
+++ b/app/views/years/projects/index.html.erb
@@ -41,7 +41,7 @@
             <% end %>
           </td>
           <td>
-            Du <%= l project.from, format: "%d/%m" %>
+            du <%= l project.from, format: "%d/%m" %>
             au <%= l project.to, format: "%d/%m/%Y" %>
           </td>
           <td><%= simple_format project.description %></td>
