--- a/app/views/years/projects/show.html.erb
+++ b/app/views/years/projects/show.html.erb
@@ -69,9 +69,9 @@
           <td><%= link_to involvement.teaching_module&.full_name, involvement.teaching_module %></td>
           <td><%= link_to involvement.promotion&.year, involvement.promotion %></td>
           <td><%= involvement.student_hours.round %></td>
-          <td><%= involvement.hours_cm %></td>
-          <td><%= involvement.hours_td %></td>
-          <td><%= involvement.hours_tp %></td>
+          <td><%= involvement.hours_cm.round %></td>
+          <td><%= involvement.hours_td.round %></td>
+          <td><%= involvement.hours_tp.round %></td>
           <td><%= involvement.teacher_hours.round %></td>
           <td><%= simple_format involvement.description %></td>
           <td>
