--- a/app/views/years/users/index.html.erb
+++ b/app/views/years/users/index.html.erb
@@ -1,18 +1,18 @@
 <%= render 'years/nav' %>
 
 <p><%= @users.count %> personnes</p>
-<%= link_to 'Nouvelle personne', new_user_path, class: 'btn btn-primary btn-xs' if can? :create, User %>
+<p class="small">Attention, la maquette est une étape préalable d'organisation, seul l'emploi du temps compte.</p>
 
-<h2>Services planifiés dans l'emploi du temps</h2>
-<table class="table table-hover">
+<table class="table table-hover table-striped">
   <thead>
     <tr>
       <th style="min-width: 200px">Nom</th>
       <th>Service</th>
-      <th>Fonctionnaire ?</th>
+      <th>Maquette</th>
+      <th>Delta service / maquette</th>
       <th>EDT</th>
-      <th>EDT heures pondérées</th>
-      <th>Delta service / EDT</th>
+      <th>EDT (heures pondérées)</th>
+      <th>Delta service / EDT pondéré</th>
     </tr>
   </thead>
   <tbody>
@@ -25,46 +25,16 @@
       scheduled_ponderated = @year.scheduled_hours_ponderated_for(user)
       %>
       <tr>
-        <td><%= link_to user, year_user_path(year_id: @year.id, id: user.id) %></td>
+        <td>
+          <%= link_to user, year_user_path(year_id: @year.id, id: user.id) %>
+          <% if user.public %><span class="label label-default">Fonctionnaire</span><% end %>
+        </td>
         <td><%= service.round unless service.nil? %></td>
-        <td><%= user.public ? 'oui' : 'non' %></td>
+        <td><%= planned.round %></td>
+        <%= render 'application/td_delta', value: planned, reference: service %>
         <td><%= scheduled.round %></td>
         <td><%= scheduled_ponderated.round %></td>
         <%= render 'application/td_delta', value: scheduled_ponderated, reference: service %>
-      </tr>
-    <% end unless @year.users.nil? %>
-  </tbody>
-</table>
-
-<h2>Services prévus dans la maquette</h2>
-<p>Attention, la maquette est une étape préalable d'organisation, seul l'emploi du temps compte.</p>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th style="min-width: 200px">Nom</th>
-      <th>Service</th>
-      <th>Fonctionnaire ?</th>
-      <th>Maquette</th>
-      <th>Delta service / maquette</th>
-      <th>Delta maquette / EDT</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @year.users.each do |user| %>
-      <% next if user.nil? %>
-      <%
-      service = user.hours
-      planned = @year.planned_hours_for(user)
-      scheduled = @year.scheduled_hours_for(user)
-      scheduled_ponderated = @year.scheduled_hours_ponderated_for(user)
-      %>
-      <tr>
-        <td><%= link_to user, year_user_path(year_id: @year.id, id: user.id) %></td>
-        <td><%= service.round unless service.nil? %></td>
-        <td><%= user.public ? 'oui' : 'non' %></td>
-        <td><%= planned.round %></td>
-        <%= render 'application/td_delta', value: planned, reference: service %>
-        <%= render 'application/td_delta', value: scheduled_ponderated, reference: planned %>
       </tr>
     <% end unless @year.users.nil? %>
   </tbody>
