--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -60,9 +60,10 @@
     <tr>
       <th>Projet</th>
       <th>Semestre</th>
+      <th width="200">Intervenants</th>
       <th>Dates</th>
-      <th>Volume d'heures enseignant (tous enseignants)</th>
-      <th>Volume d'heures étudiant</th>
+      <th>Heures enseignant (tous enseignants)</th>
+      <th>Heures étudiant</th>
       <th>Heures sans intervenant (heures étudiant, dans l'EDT)</th>
     </tr>
   </thead>
@@ -71,6 +72,7 @@
       <tr>
         <td><%= link_to project, [@year, project] %></td>
         <td><%= project.semesters.join(', ') %></td>
+        <td class="small"><%= project.users.join(', ') %></td>
         <td>
           du <%= l project.from, format: "%d/%m" %>
           au <%= l project.to, format: "%d/%m/%Y" %>
