--- a/app/views/years/users/index.html.erb
+++ b/app/views/years/users/index.html.erb
@@ -1,7 +1,10 @@
 <%= render 'years/nav' %>
 
 <p><%= @users.count %> personnes</p>
-<p class="small">Attention, la maquette est une étape préalable d'organisation, seul l'emploi du temps compte.</p>
+<p class="small">
+  Attention, la maquette est une étape préalable d'organisation, seul l'emploi du temps compte.
+  Les semaines académiques ne sont pas intégrées dans la maquette, ce qui explique de fortes différences maquette/EDT pour les personnes qui utilisent beaucoup ces semaines.
+</p>
 
 <table class="table table-hover table-striped">
   <thead>
