--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="col-md-4">
         <%= f.input :email, as: :email %>
+        <%= f.input :email_secondary, as: :email %>
         <%= f.input :admin if current_user.admin? %>
       </div>
       <div class="col-md-4">
