--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
     <tr>
       <th style="min-width: 200px">Nom</th>
       <th>Email</th>
+      <th>Email secondaire</th>
       <th>Fonctionnaire?</th>
     </tr>
   </thead>
@@ -19,6 +20,7 @@
             <%= link_to 'Envoyer l\'invitation', reset_user_path(user), class: 'btn btn-primary btn-xs', method: :post %>
           <% end %>
         </td>
+        <td><%= user.email_secondary %></td>
         <td><%= user.public ? 'oui' : 'non' %></td>
       </tr>
     <% end %>
