--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-default navbar-static-top">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
         <%= fa_icon :bars %>
