hours without module

--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -42,15 +42,18 @@
         <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :hours_tp).round %></td>
       </tr>
     <% end %>
-    <tr>
-      <td>NA</td>
-      <td>NA</td>
-      <td>Heures sans module</td>
-      <td><%= @year.scheduled_hours_for_teaching_module_and_user(nil, @user).round %></td>
-      <td><%= @year.scheduled_hours_for_teaching_module_and_user(nil, @user, :hours_cm).round %></td>
-      <td><%= @year.scheduled_hours_for_teaching_module_and_user(nil, @user, :hours_td).round %></td>
-      <td><%= @year.scheduled_hours_for_teaching_module_and_user(nil, @user, :hours_tp).round %></td>
-    </tr>
+    <% hours_without_module = @year.scheduled_hours_for_teaching_module_and_user(nil, @user).round %>
+    <% if hours_without_module > 0 %>
+      <tr>
+        <td>NA</td>
+        <td>NA</td>
+        <td>Heures sans module</td>
+        <td><%= hours_without_module %></td>
+        <td><%= @year.scheduled_hours_for_teaching_module_and_user(nil, @user, :hours_cm).round %></td>
+        <td><%= @year.scheduled_hours_for_teaching_module_and_user(nil, @user, :hours_td).round %></td>
+        <td><%= @year.scheduled_hours_for_teaching_module_and_user(nil, @user, :hours_tp).round %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 
