--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -18,6 +18,7 @@
 
 
 <h3>Service validé (planifié dans l'emploi du temps)</h3>
+<p>Heures enseignant</p>
 <table class="table">
   <thead>
     <tr>
