--- a/app/views/years/involvements/index.html.erb
+++ b/app/views/years/involvements/index.html.erb
@@ -25,10 +25,10 @@
       <td><%= link_to involvement.user, involvement.user unless involvement.user.nil? %></td>
       <td><%= link_to involvement.teaching_module.full_name, involvement.teaching_module unless involvement.teaching_module.nil? %></td>
       <td><%= involvement.student_hours %></td>
-      <td><%= involvement.hours_cm %></td>
-      <td><%= involvement.hours_td %></td>
-      <td><%= involvement.hours_tp %></td>
-      <td><%= involvement.teacher_hours %></td>
+      <td><%= involvement.hours_cm.round %></td>
+      <td><%= involvement.hours_td.round %></td>
+      <td><%= involvement.hours_tp.round %></td>
+      <td><%= involvement.teacher_hours.round %></td>
       <td><%= simple_format involvement.description %></td>
       <td><%= link_to involvement.project, [@year, involvement.project] unless involvement.project.nil? %></td>
       <td><%= link_to 'Modifier', edit_year_involvement_path(year_id: @year.id, id: involvement.id), class: 'btn btn-primary btn-xs' if can? :edit, involvement%></td>
