--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -109,37 +109,36 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Promotion</th>
       <th>Date</th>
-      <th>Module</th>
+      <th>Module<br/><span class="small">promotion</span></th>
       <th>Projet</th>
-      <th>Label</th>
+      <th width="400">Description</th>
       <th>Heures<br/><span class="small">étudiant/enseignant</span></th>
-      <th>Ouvrir</th>
+      <th class="hidden-print">Ouvrir</th>
     </tr>
   </thead>
   <tbody>
     <% @year.events_for(@user).ordered.each do |event| %>
       <tr>
-        <td><%= event.promotion.year %></td>
-        <td><%= event.date.strftime "%d/%m/%Y, %H:%M" %></td>
-        <td class="<%= 'bg-danger' if event.teaching_module.nil? %>"><%= event.teaching_module %></td>
+        <td>
+          <%= event.date.strftime "%d/%m/%Y" %>
+          <p class="small"><%= event.from.strftime "%kh" %> - <%= event.to.strftime "%kh" %></p>
+        </td>
+        <td class="<%= 'bg-danger' if event.teaching_module.nil? %>">
+          <%= event.teaching_module %>
+          <p class="small">Promo <%= event.promotion.year %></p>
+        </td>
         <td><%= event.project %></td>
         <td>
           <%= event.label %>
           <p class="small"><%= event.description %></p>
         </td>
-        <td>
-          <%= number_to_human event.duration %>h <%= event.kind.to_s.upcase %><br/>
-          <p class="small">
-            <%= number_to_human event.student_hours %> / <%= number_to_human event.teacher_hours %>
-          </p>
-        </td>
+        <td><%= number_to_human event.duration %>h <%= event.kind.to_s.upcase %></td>
         <td>
           <%= link_to 'Ouvrir la semaine',
                       "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}",
                       target: :blank,
-                      class: 'btn btn-default btn-xs' %>
+                      class: 'btn btn-default btn-xs hidden-print' %>
         </td>
       </tr>
     <% end %>
