--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -16,7 +16,7 @@ body
   background-image: asset-url('background.png')
   background-position: center
 
-ul 
+ul
   list-style-type: none
   list-style-position: inside
   padding-left: 0
@@ -37,7 +37,7 @@ hr.spacer
   background: none
   border: none
   text-transform: uppercase
-  .navbar-nav 
+  .navbar-nav
     > li > a
       color: white
       font-size: 13px
@@ -50,7 +50,7 @@ hr.spacer
     border: none
     border-radius: 0
 
-.abstract 
+.abstract
   background: #eee
   padding: 20px
 
@@ -59,7 +59,7 @@ hr.spacer
   height: 660px
   margin: 0 auto
 
-.logo 
+.logo
   display: block
   height: 80px
   width: 200px
@@ -123,7 +123,7 @@ main
     background: black
     opacity: .3
 
-.panel-heading 
+.panel-heading
   h3
     margin: 0
   h4
@@ -154,7 +154,7 @@ footer
     display: inline-block
     margin-top: 30vh
     .logo
-      margin: 10px auto !important
+      margin: 10px auto 30px !important
 
 body.discuss
   .logo
